--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="icon" type="images/x-icon" href="./images/favicon.png">
     <title>DigiMark Sky - Your 360° Digital Partner</title>
+    <base href="https://mohit-aggarwal314.github.io/digimark">
 </head>
 <body>
     <div class="container-fluid navigations fixedheader py-3 ">
