--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="icon" type="images/x-icon" href="./images/favicon.png">
     <title>DigiMark Sky - Your 360° Digital Partner</title>
-    <base href="https://mohit-aggarwal314.github.io/digimark">
 </head>
 <body>
     <div class="container-fluid navigations fixedheader py-3 ">
@@ -21,7 +20,7 @@
                 <div class="col-md-3">
                     <div class="logo">
                         <a href="#">
-                            <img src="/images/DMS Logo.png" alt="">
+                            <img src="/images/DMS_Logo.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -165,7 +164,7 @@
                             <div class="cus-left">
                                 <div class="icon">
                                     <!-- <i class="fa-brands fa-wordpress-simple"></i> -->
-                                    <img src="/images/digital marketing.png"
+                                    <img src="/images/digital_marketing.png"
                                         alt="">
                                 </div>
                             </div>
@@ -202,7 +201,7 @@
                                 <div class="cus-left">
                                     <div class="icon">
                                         <!-- <i class="fa-brands fa-wordpress-simple"></i> -->
-                                        <img src="/images/magnet copy.png"
+                                        <img src="/images/magnet_copy.png"
                                             alt="">
                                     </div>
                                 </div>
@@ -270,7 +269,7 @@
                                 <div class="cus-left">
                                     <div class="icon">
                                         <!-- <i class="fa-brands fa-wordpress-simple"></i> -->
-                                        <img src="/images/tele marketing.png"
+                                        <img src="/images/tele_marketing.png"
                                             alt="">
                                     </div>
                                 </div>
